--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spurl %}
+{% load thumbnail i18n truncate display_tags arating_tags spacify_tags spurl %}
 
 
 <!-- list item s -->
@@ -82,7 +82,10 @@
 	<div class="list_body_item c6">
 		<ul class="unstyled">
 			<li>
+				<!--
 				&nbsp;{{ item.releasedate|date:"SHORT_DATE_FORMAT" }}
+				-->
+				&nbsp;{{ item.releasedate_approx|spacify }}
 			</li>
 			<li class="small">
 				{% if  item.release_country %}
