--- a/website/apps/alibrary/templates/alibrary/playlist_create.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_create.html
@@ -49,7 +49,7 @@
 {% block inner %}
 <div class="item_detail" style="">
 
-	<section>
+	<section class="shaded">
 		<div class="row iteminfo release">
 			{# include "alibrary/playlist/_detail_info.html" #}
 			<h1>&nbsp;</h1>
