--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -70,7 +70,7 @@
 {% block inner %}
 <div class="item_detail" style="">
 
-	<section>
+	<section class="shaded">
 		<div class="row iteminfo release">
 			{% include "alibrary/playlist/_detail_info.html" %}
 		</div>
