--- a/website/site-static/sass/aplayer.sass
+++ b/website/site-static/sass/aplayer.sass
@@ -1,8 +1,15 @@
 // Imports -------------------------------------------------------------------
 @import "asite"
- 
 @import "aplayer/base" 
 
 
-  
+// override
+.row-fluid > .span8
+  width: 65% !important
+.row-fluid > .span9
+  width: 74% !important
 
+
+.footer
+  overflow: hidden
+  height: 25px
