--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -38,6 +38,23 @@ section.comments.disqus
     margin-top: 15px
     .markdown
       // +markdown()
+    
+  &.history
+    margin-top: 15px
+    div.item
+      border-bottom: 1px solid #dddddd
+      ul
+        //color: red
+      p
+        color: #5a5a5a
+        font-size: 90%
+        
+  &.appearance
+    margin-top: 15px
+
+        
+  &.media
+    margin-top: 15px
 
 
 .iteminfo
