--- a/website/apps/alibrary/templates/alibrary/artist/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/artist/_detail_info.html
@@ -111,7 +111,7 @@
 		<dd>
 			
 			{% if object.owner %}
-			<span class="key">{% trans "Uploaded by" %}:</span> <span class="value"><a href="{{ object.owner.get_absolute_url }}">{{ object.owner }}</a></span> |
+			<span class="key">{% trans "Created by" %}:</span> <span class="value"><a href="{{ object.owner.get_absolute_url }}">{{ object.owner }}</a></span> |
 			{% endif %}
 			
 			{% if object.publisher %}
