--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -21,30 +21,37 @@
 <div class="item_detail" style="">
 
 	<section class="shaded">
-		
+
 		<div class="row iteminfo release">
 			{% include "alibrary/media/_detail_info.html" %}
 		</div>
 
+		<!--
 		<div class="row-fluid">
 
-			<div class="span12">
+		<div class="span12">
 
-				<div  id="waveform" style="background: #a5a5a5; width: 100%; height: 50px;">
-					<img src="{{ object.get_waveform_url }}" style="height: 50px; width: 100%;"></img>
-
-				</div>
-			</div>
+		<div  id="waveform" style="background: #a5a5a5; width: 100%; height: 50px;">
+		<img src="{{ object.get_waveform_url }}" style="height: 50px; width: 100%;"></img>
 
 		</div>
+		</div>
+
+		</div>
+		-->
 
 	</section>
 
 	<div class="item_menu" id="item_menu">
 		<ul class="nav nav-tabs">
 			<li class="active">
-				<a href="#waveform" data-toggle="tab">{% trans "Track" %}</a>
+				<a href="#overview_" data-toggle="tab">{% trans "Overview" %}</a>
 			</li>
+			{%  if object.appearances.count > 0 %}
+			<li>
+				<a href="#appearance" data-toggle="tab">{% trans "Appearance" %} ({{ object.appearances.count }})</a>
+			</li>
+			{% endif %}
 			<li>
 				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
 			</li>
@@ -60,32 +67,56 @@
 
 		<div class="tab-content">
 
+			<div class="tab-pane active" id="overview_">
+
+				<section class="media">
+					<h2>{% trans "Track" %}</h2>
+					<div  id="waveform" style="background: #a5a5a5; width: 100%; height: 50px;">
+						<img src="{{ object.get_waveform_url }}" style="height: 50px; width: 100%;"></img>
+					</div>
+				</section>
+				
+				{% if object.description %}
+				<section class="description">
+					<h2>{% trans "Track description" %}</h2>
+					<div class="description markdown padded-h">
+						{% wikify object.description %}
+					</div>
+				</section>
+				{% endif %}
+
+			</div>
+
+			<div class="tab-pane" id="appearance">
+
+				<section class="appearance">
+
+					<h2>{% trans "Appears on" %}</h2>
+
+					<div class="listview container playlist s">
+
+						<div class="list_body">
+
+							{% with highlight=object extended=1 %}
+							{% for item in object.appearances %}
+							{% include "alibrary/playlist/list_item_s.html" %}
+							{% endfor %}
+							{% endwith %}
+						</div>
+					</div>
+
+				</section>
+
+			</div>
+
 			<div class="tab-pane" id="history">
 
-				<!---->
-				<table class="table table-condensed history">
+				<section class="history">
 
-					<thead>
-						<tr>
-							<th>User</th>
-							<th>Time</th>
-							<th>Comment</th>
-						</tr>
-					</thead>
-					<tbody>
+					<h2>{% trans "Edit history" %}</h2>
 
-						{% for r in object.get_versions.all|slice:":20" %}
-						<tr>
-							<td><a href="{{ r.revision.user.get_profile.get_absolute_url }}">{{ r.revision.user }}</a></td>
-							<td>{{ r.revision.date_created }}</td>
-							<td>{{ r.revision.comment }}</td>
-
-						</tr>
-
-						{% endfor %}
-
-					</tbody>
-				</table>
+					{% include "alibrary/element/_object_history.html" %}
+				</section>
 
 			</div>
 
@@ -97,20 +128,10 @@
 
 			</div>
 
-			<div class="tab-pane" id="broadcasts">
-				...
-			</div>
 		</div>
 
 	</section>
 
-	<section class="description">
-
-		<div class="description markdown padded-h">
-			{% wikify object.description %}
-		</div>
-
-	</section>
 
 	<section class="comments on-site">
 
