--- a/website/apps/alibrary/templates/alibrary/playlist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_detail.html
@@ -20,9 +20,9 @@
 
 
 
-<div class="item_detail" style="">
+<div class="item_detail">
 
-	<section>
+	<section class="shaded">
 		<div class="row iteminfo release">
 			{% include "alibrary/playlist/_detail_info.html" %}
 		</div>
@@ -50,7 +50,7 @@
 
 			<div class="tab-pane active" id="tracklist">
 
-				<div class="listview container medias inner s">
+				<div class="listview container medias s">
 
 					<div class="list_header"></div>
 
@@ -59,7 +59,7 @@
 
 						{% if item.content_type.model == "media" %}
 							{% with item=item.content_object %}
-							{% include "alibrary/media/_list_item_xs.html" %}
+							{% include "alibrary/media/_list_item_foreign_xs.html" %}
 							{% endwith %}
 						{% endif %}
 
