--- a/website/apps/alibrary/templates/alibrary/release/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/release/_detail_info.html
@@ -151,7 +151,7 @@
 			{% endif %}
 			
 			{% if object.creator %}
-			<span class="key">{% trans "Uploaded by" %}:</span> <span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
+			<span class="key">{% trans "Created by" %}:</span> <span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
 			{% endif %}
 			
 			<!--
