--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -33,6 +33,11 @@
 			<li class="active">
 				<a href="#tracklist" data-toggle="tab">{% trans "Tracklist" %}</a>
 			</li>
+			{% if object.description %}
+			<li>
+				<a href="#description" data-toggle="tab">{% trans "Description" %}</a>
+			</li>
+			{% endif %}
 			<li>
 				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
 			</li>
@@ -59,50 +64,33 @@
 				</div>
 			</div>
 
+			<div class="tab-pane" id="description">
+
+				<section class="description">
+					
+					<h2>{% trans "Release description" %}</h2>
+					
+					<div class="description markdown padded-h">
+						{% wikify object.description %}
+					</div>
+				</section>
+
+			</div>
+
 			<div class="tab-pane" id="history">
 
-				
-
-				
-				<!---->
-				<table class="table table-condensed history">
-
-					<thead>
-						<tr>
-							<th>User</th>
-							<th>Time</th>
-							<th>Comment</th>
-						</tr>
-					</thead>
-					<tbody>
-
-						{% for r in object.get_versions.all|slice:":20" %}
-						<tr>
-							<td><a href="{{ r.revision.user.get_profile.get_absolute_url }}">{{ r.revision.user }}</a></td>
-							<td>{{ r.revision.date_created }}</td>
-							<td>{{ r.revision.comment }}</td>
-
-						</tr>
-
-						{% endfor %}
-
-					</tbody>
-				</table>
-				
+				<section class="history">
+					
+					<h2>{% trans "Edit history" %}</h2>
+					
+					{% include "alibrary/element/_object_history.html" %}
+				</section>
 
 			</div>
 
 			<div class="tab-pane" id="broadcasts">
 				...
 			</div>
-		</div>
-
-	</section>
-
-	<section class="description">
-
-		<div class="description markdown padded-h">
-			{% wikify object.description %}
 		</div>
 
 	</section>
