--- a/website/apps/actstream/templates/actstream/templatetags/user_stream.html
+++ b/website/apps/actstream/templates/actstream/templatetags/user_stream.html
@@ -75,7 +75,7 @@
 	
 	<div class="actions">
 
-		<a class="btn btn-primary btn-small" href="#">More</a>
+		<a class="btn btn btn-small" href="{% url actstream-action-list %}">More</a>
 
 		
 	</div>
