--- a/website/site-static/sass/apps/_notification.sass
+++ b/website/site-static/sass/apps/_notification.sass
@@ -24,6 +24,9 @@ div.notification-holder
       color: #a5a5a5
     
     .row-fluid
+    
+      .span8
+        width: 64.96% !important
       > div
         > span, > a
           padding: 4px
