--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -13831,14 +13831,18 @@ div.notification-holder .message .timestamp {
   color: #a5a5a5;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000328}}
+div.notification-holder .message .row-fluid .span8 {
+  width: 64.96% !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000331}}
 div.notification-holder .message .row-fluid > div > span, div.notification-holder .message .row-fluid > div > a {
   padding: 4px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000330}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000333}}
 div.notification-holder .message .row-fluid > div > span.target, div.notification-holder .message .row-fluid > div > a.target {
   font-weight: bold;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000332}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000335}}
 div.notification-holder .message.hover {
   background-color: #ddffd9;
 }
