album artist integration (models & admin)

--- a/website/apps/alibrary/templates/alibrary/artist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/artist_detail.html
@@ -110,14 +110,14 @@
 
 					<h2>{% trans "Releases" %}</h2>
 
-					<div class="listview container releases inner l">
+					<div class="listview container releases inner m">
 
 						<div class="list_header"></div>
 
 						<div class="list_body">
 
 							{% for item in releases.object_list %}
-							{% include "alibrary/release/list_item_l.html" %}
+							{% include "alibrary/release/list_item_m.html" %}
 							{% endfor %}
 						</div>
 					</div>
