--- a/website/apps/alibrary/templates/alibrary/release/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/release/_detail_info.html
@@ -12,10 +12,25 @@
 		</dt>
 		<dd>
 			{% for artist in object.get_artists %}
-			{% with item=artist %}
-			{% include "alibrary/element/_inline_link.html" %}
-			{% if not forloop.last %},{% endif %}
-			{% endwith %}
+			
+			{# check if extended artist (with join phrase) #}
+			{% if "join_phrase" in artist %}
+
+				{% with item=artist.artist %}
+				{% if artist.join_phrase %}{{ artist.join_phrase }}{% endif %}
+				{% include "alibrary/element/_inline_link.html" %}
+				{% endwith %}
+			
+			{% else %}
+			
+				{% with item=artist %}
+				{% include "alibrary/element/_inline_link.html" %}
+				{% if not forloop.last %},{% endif %}
+				{% endwith %}
+			
+			{% endif %}
+			
+
 			{% endfor %}
 			&nbsp;
 		</dd>
