album artist integration (models & admin) - admin shortcuts

--- a/website/apps/alibrary/templates/alibrary/release/sidebar/context/_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/context/_detail.html
@@ -4,13 +4,11 @@
 
 <!---->
 {% for perm in object_perms %}
-{{ perm }}
+{# perm #}
 {% endfor %}
 
 
-{% if "admin_release" in object_perms %}
-<h1>ADMIN</h1>
-{% endif %}
+{% if "admin_release" in object_perms %}{% endif %}
 
 
 <!--
@@ -29,6 +27,15 @@
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
+			
+			{% if user.is_staff %}
+			<li class="link ">
+				<span class="left icon"><a href="{{ object.get_admin_url }}?next={% url alibrary-release-list %}" title="{% trans "Edit" %}">{% trans "Administration view" %}</a></span>
+				<span class="opt"></span>
+				<span class="clear"></span>
+			</li>
+			{% endif %}
+			
 			{% endif %}
 			
 
